--- a/Client/Shared/SetupStatusPage.razor
+++ b/Client/Shared/SetupStatusPage.razor
@@ -3,7 +3,7 @@
 @inject TooltipService TooltipService
 @implements IDisposable
 
-<RadzenCard Style="width: 310px; height: 200px; background-color: rgb(70, 68, 77); justify-content: center; align-items: center; " class="rz-border-radius-0">
+<RadzenCard Style="width: 310px; height: 200px; background-color: rgb(70, 68, 77); justify-content: center; align-items: center; " class="rz-border-radius-0 rz-shadow-8">
     <RadzenText Style="font-weight:700; margin-bottom: 8px"> setup of "@botStatus.Name"</RadzenText>
     <RadzenStack Orientation="Orientation.Horizontal" Gap="1rem">
         @if (botStatus != null)
