--- a/Client/Pages/FarmerBotDashboard.razor
+++ b/Client/Pages/FarmerBotDashboard.razor
@@ -31,7 +31,7 @@
                             </RadzenStack>
                         </RadzenStack>
                     }
-                    </RadzenStack>
+                </RadzenStack>
             </RadzenSplitterPane>
             @*### bottom left - no idea by now section*@
             <RadzenSplitterPane style="background-color: rgb(137, 174, 192); display: flex; justify-content: left; align-items:start; overflow: auto;">
@@ -48,7 +48,7 @@
         <RadzenSplitter Collapse=@OnCollapseDisabled Expand=@OnExpand Resize=@OnResizeDisabled>
             @*### full right - Node list and stati*@
             <RadzenSplitterPane style="background-color: rgb(137, 174, 192); display: flex; justify-content: center; align-items: center; overflow: auto;">
-                <NodesStatus nodeStatusList=@NodeStatusService.ActualNodeStatusCollectionList />
+                <NodesStatus NodeStatusList=@NodeStatusService.ActualNodeStatusCollectionList />
             </RadzenSplitterPane>
         </RadzenSplitter>
     </RadzenSplitterPane>
