--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -14,5 +14,6 @@
 @using FarmerbotWebUI.Client.Services.Settings;
 @using FarmerbotWebUI.Client.Services.Docker;
 @using FarmerbotWebUI.Client.Services.EventConsole;
+@using FarmerbotWebUI.Client.Services.Filesystem;
 @using Radzen
 @using Radzen.Blazor
