--- a/Client/App.razor
+++ b/Client/App.razor
@@ -92,6 +92,7 @@
         //AppSettings.SaveSettings(newAppSettings);
         InitializeDockerService();
         InitializeNodeStatusService();
+        InitializeFilesService();
         AppSettings.OnAppSettingsChanged -= StartServices;
     }
 
